change the database uri

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=4000
 DB_USER=bn71
-DB_PASSWORD=KS23L3sUUl18VnyE
+DB_PASSWORD=a21422100
 DB_DATABASE=art
 JWT_SECRET=ALiCzsbTrZzrSBVah_xYGy7n0pO2mhGGMw
 
